# rural-rest

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  next-prompt.md  package-lock.json  print.js  skills-lock.json  stitch.json  translate2.js
.agent/skills/: design-md  enhance-prompt  manage-docs  obsidian-sync  react-components  remotion  shadcn-ui  stitch-loop
.claude/commands/: manage-docs.md
.cursor/: cli.json
.cursor/agents/: code-reviewer.md
.github/workflows/: cursor-code-review.yml
anchor/: Anchor.toml  CLAUDE.md  Cargo.toml  package-lock.json
anchor/programs/rural-rest-dao/: Cargo.toml
anchor/programs/rural-rest-dao/src/: lib.rs
anchor/programs/rural-rest-rwa/: Cargo.toml
anchor/programs/rural-rest-rwa/src/: lib.rs
anchor/scripts/: set-treasury.ts  setup-localnet.ts
anchor/tests/: rural-rest-dao.ts  rural-rest-rwa.ts
docs/00_ARCHIVE/: 07_DAO_TEST_SCENARIOS_REALMS.md  08_DAO_IMPLEMENTATION_SPEC_REALMS.md  10_GLOBAL_VACANT_HOUSING_REFERENCES.md  11_DOMESTIC_VACANT_HOUSING_REFERENCES.md  12_LOCAL_TOURISM_TRENDS.md  12_PITCH_DECK_v1.md  예창패사업계획서양식.docx
docs/01_Concept_&_Design/: 00_SITE_OVERVIEW.md  01_VISION_CORE.md  02_LEAN_CANVAS.md  03_PRODUCT_SPECS.md  04_ROADMAP.md  05_UI_DESIGN.md  06_ADMIN_STRATEGY.md  (+3 more)
rural-rest-v2/: components.json  drizzle.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/: .gitignore  README.md  drizzle.config.ts  i18next-scanner.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
web/app/: app.css  (+3 more)
(+536 files in other folders)
