[package]
name = "rural-rest-dao"
version = "0.1.0"
description = "Rural Rest DAO Governance Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rural_rest_dao"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
rural-rest-rwa = { path = "../rural-rest-rwa", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
